# classify

./: .envrc  .gitignore  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  justfile  noxfile.py  pyproject.toml  setup.py
.github/workflows/: main.yml
classify/: formatters.py  library.py  main.py  template.html
classify/contrib/django/: settings.py
classy/: library.py  main.py  template.html
src/classify/: __init__.py  __main__.py  classification.py  dataclasses.py  django.py  exceptions.py  filters.py  formatters.py  library.py  main.py  resolution.py
src/classify/contrib/django/: settings.py
src/classify/renderers/: __init__.py  console.py  html.py  pager.py  string.py
src/classify/templates/: class.html  web.html
tests/: conftest.py  dummy_class.py  import_error.py  test_classification.py  test_library.py  test_main.py
tests/django_proj/core/: models.py  settings.py  urls.py
tests/renderers/: test_html.py  test_string.py
