[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "classify"
version = "0.6.0"
description = "Generate concrete Class documentation for Python Classes."
readme = "README.rst"
requires-python = ">=3.13"
authors = [
  {name = "George Hickman", email = "george@ghickman.co.uk"},
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 2.6",
  "Programming Language :: Python :: 2.7",
  "Topic :: Documentation",
]
dependencies = [
  "click>=8.3.0",
  "jinja2>=2.7",
]

[project.scripts]
classify = "classify.main:run"

[project.urls]
Repository = "https://github.com/ghickman/classify/"
Changelog = "https://github.com/ghickman/classify/blob/main/CHANGELOG.rst"

[dependency-groups]
dev = [
  "black>=25.9.0,<26",
  "ruff>=0.14.2",
  "toml-sort>=0.24.3",
  "ty>=0.0.1a24",
]

[tool.ruff]
line-length = 88
extend-exclude = [
  "src/classify/contrib/django/",
  "src/classify/templates",
]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "C90",
  "COM",
  "D",
  "E501",
  "ERA001",
  "PLR0913",
  "S",
  "SIM108",
  "T20",
  "TID252",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.tomlsort]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
sort_first = [
  "build-system",
  "project",
]
