[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "classify"
version = "2025.10.1"
description = "Generate concrete Class documentation for Python Classes"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "George Hickman", email = "george@ghickman.co.uk"},
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
]
dependencies = [
  "attrs>=25.4.0",
  "click>=8.3.0",
  "jinja2>=2.7",
  "rich>=14.2.0",
]

[project.scripts]
classify = "classify.main:run"

[project.urls]
Repository = "https://github.com/ghickman/classify/"
Changelog = "https://github.com/ghickman/classify/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "black>=25.9.0,<26",
  "coverage>=7.11.0",
  "django>=5.2.7",
  "httpx>=0.28.1",
  "ipdb>=0.13.13",
  "nox>=2025.10.16",
  "nox-uv>=0.6.3",
  "pytest>=8.4.2",
  "pytest-env>=1.2.0",
  "ruff>=0.14.2",
  "toml-sort>=0.24.3",
  "ty>=0.0.1a24",
]

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
relative_files = true
dynamic_context = "test_function"
omit = [
  "src/classify/__main__.py",
  "src/classify/contrib/*",
  "src/classify/django.py",
  "tests/dummy_class.py",
]
source = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--tb=native"
env = [
  "TEST_MODE=1",
]

[tool.ruff]
line-length = 88
extend-exclude = [
  "src/classify/contrib/django/",
  "src/classify/templates",
]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",
  "C90",
  "COM",
  "D",
  "E501",
  "ERA001",
  "FBT",
  "PLR0913",
  "S",
  "SIM108",
  "T20",
  "TID252",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/import_error.py" = [
  "EM101",
  "TRY002",
  "TRY003",
]

[tool.tomlsort]
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
sort_first = [
  "build-system",
  "project",
]

[tool.ty.src]
include = ["src", "tests"]
